--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-auth-template",
+  "name": "fantasy-cheat-sheet",
   "homepage": "https://<USERNAME>.github.io/<REPO NAME>",
   "version": "0.1.0",
   "private": true,
@@ -17,8 +17,10 @@
     "react": "^16.4.2",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.4.2",
+    "react-modal": "^3.11.2",
     "react-router-dom": "^4.3.1",
     "resolve": "1.6.0",
+    "styled-components": "^5.2.0",
     "url-loader": "0.6.2"
   },
   "scripts": {
@@ -81,17 +83,6 @@
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "css-loader": "0.28.7",
-    "eslint": "^5.14.1",
-    "eslint-config-react-app": "^3.0.7",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-loader": "^2.1.2",
-    "eslint-plugin-flowtype": "^2.50.3",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-react": "^7.12.0",
-    "eslint-plugin-standard": "^4.0.0",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "html-webpack-plugin": "2.29.0",
