--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^16.4.2",
     "react-modal": "^3.11.2",
     "react-router-dom": "^4.3.1",
+    "react-select": "^3.1.0",
     "resolve": "1.6.0",
     "styled-components": "^5.2.0",
     "url-loader": "0.6.2"
