--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.4.2",
+    "react-awesome-spinners": "^1.3.1",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.4.2",
     "react-modal": "^3.11.2",
