--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^16.4.2",
     "react-awesome-spinners": "^1.3.1",
     "react-bootstrap": "^1.0.0-beta.5",
+    "react-bootstrap-table": "^4.3.1",
     "react-dom": "^16.4.2",
     "react-modal": "^3.11.2",
     "react-router-dom": "^4.3.1",
