--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "fs-extra": "3.0.1",
+    "lodash": "^4.17.20",
     "mdbreact": "^4.27.0",
     "object-assign": "4.1.1",
     "promise": "8.0.1",
@@ -19,6 +20,8 @@
     "react-awesome-spinners": "^1.3.1",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-bootstrap-table": "^4.3.1",
+    "react-chartjs-2": "^2.10.0",
+    "react-charts": "^2.0.0-beta.7",
     "react-dom": "^16.4.2",
     "react-modal": "^3.11.2",
     "react-router-dom": "^4.3.1",
