--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome": "^1.1.8",
     "autoprefixer": "7.1.6",
     "axios": "^0.18.0",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.5.2",
     "chalk": "1.1.3",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
@@ -19,11 +18,11 @@
     "raf": "3.4.0",
     "react": "^16.13.1",
     "react-awesome-spinners": "^1.3.1",
-    "react-bootstrap": "^1.0.0-beta.5",
+    "react-bootstrap": "^1.3.0",
     "react-bootstrap-table": "^4.3.1",
     "react-chartjs-2": "^2.10.0",
     "react-charts": "^2.0.0-beta.7",
-    "react-dom": "^16.4.2",
+    "react-dom": "^16.13.1",
     "react-modal": "^3.11.2",
     "react-router-dom": "^5.2.0",
     "react-select": "^3.1.0",
@@ -110,7 +109,7 @@
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "react-dev-utils": "^5.0.1",
-    "sass-loader": "^7.1.0",
+    "sass-loader": "^7.3.1",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "webpack": "3.8.1",
